SERVER-61299 Rename during migration crashes recipient